--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,9 @@ navbar-links:
     - 부스 및 지면광고: "부스및지면광고"
   위원회: "위원회"
   행사장:
-    - 행사장: "jinwoo"
+    - 행사장: "행사장"
     - 행사장 오시는길: "행사장오시는길"
-    - 숙박안내: "jinwoo"
+    - 숙박안내: "숙박안내"
     
   
 
