--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ navbar-links:
   지면광고:
     - 서울시립대학교 GARS랩: "fall/서울시립대"
     - 지오빅데이터 오픈플랫폼: "fall/지오빅데이터"
+    - ㈜선영종합엔지니어링: "fall/선영"
   사전등록: "fall/사전등록"
   초록접수: "fall/초록접수"
   신청:
