--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ navbar-links:
     - 서울시립대학교 GARS랩: "fall/서울시립대"
     - 지오빅데이터 오픈플랫폼: "fall/지오빅데이터"
     - ㈜선영종합엔지니어링: "fall/선영"
-    - ㈜해양과학기술ENG: "fall/해양과학기술"
+    - ㈜해양기술ENG: "fall/해양과학기술"
   사전등록: "fall/사전등록"
   초록접수: "fall/초록접수"
   신청:
